--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.14.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "openai": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
