--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start-server": "node ./index.js",
-    "dev": "npx nodemon index.js"
+    "dev": "nodemon --exec node --loader ts-node/esm ./index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,8 @@
     "openai": "^4.12.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/express": "^4.17.20",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
