--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "seedbedgpt-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start-server": "node ./index.js",
-    "dev": "nodemon --exec ts-node-esm ./index.ts"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.12.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.20",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
-  }
+    "name": "seedbedgpt-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "start-server": "node ./index.js",
+        "dev": "nodemon --exec node --loader ts-node-esm ./index.ts",
+        "start": "nodemon --exec node --loader ts-node-esm ./index.ts"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/cors": "^2.8.15",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "openai": "^4.12.4"
+    },
+    "devDependencies": {
+        "@tsconfig/react-native": "^3.0.2",
+        "@types/express": "^4.17.20",
+        "nodemon": "^3.0.1",
+        "ts-node": "^10.9.1",
+        "typescript": "5.2.2"
+    }
 }
