--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vite-template-redux",
-  "private": true,
-  "version": "0.0.0",
+  "name": "web",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -26,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
@@ -42,9 +42,9 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jsdom": "^21.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.3",
     "prettier-config-nick": "^1.0.2",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
   },
